# document-anonymizer

./: .coverage  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  Anonymization-of-Sensitive-Information-in-Financial-Documents-Using-Python-Diffusion-Models-and-Named-Entity-Recognition.md  CLAUDE.md  CLEAN_IMPLEMENTATION_PLAN.md  CODE_REVIEW.md  CODE_REVIEW_ACTION_ITEMS.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_FINDINGS.md  DETAILED_IMPLEMENTATION_SPECIFICATION.md  DETAILED_IMPLEMENTATION_SPECIFICATION_v2.md  DETAILED_TODO.md  Dockerfile  Document_Anonymization_Project_Report.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_REPORT.md  README.md  SECURITY_FIXES_COMPLETED.md  TODO.md  TODO_ACTION_ITEMS.md  TODO_IN_CODE.md  coverage.json  docker-compose.yml  example_training.py  main.py  project_report.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/inference/: engine_config.yaml
configs/training/: README.md  unet_config.yaml  unet_config_cloud.yaml  unet_config_local.yaml  vae_config.yaml  vae_config_cloud.yaml  vae_config_local.yaml
data/: README.md
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  performance.md  troubleshooting.md  vae_quality_assessment.md
docs/examples/: advanced_usage.py  basic_usage.py
scripts/: benchmark.py  download_models.py  download_xfund_data.py  manage_fonts.py  manage_r2_bucket.py  reorganize_xfund_data.py  test_xfund_integration.py  upload_to_r2.py  vae_dashboard.py  visualize_vae_quality.py
src/: __init__.py
src/anonymizer/: __init__.py
src/anonymizer/batch/: __init__.py  processor.py
src/anonymizer/cloud/: __init__.py  modal_app.py  modal_config.py  wandb_integration.py
src/anonymizer/core/: __init__.py  config.py  exceptions.py  models.py
src/anonymizer/fonts/: __init__.py  bundled.py  manager.py  models.py  system.py  utils.py
src/anonymizer/inference/: cache.py  engine.py
src/anonymizer/models/: __init__.py  config.py  downloader.py  manager.py  registry.py  validator.py
src/anonymizer/ocr/: __init__.py  engines.py  models.py  processor.py
src/anonymizer/performance/: __init__.py  benchmarks.py  monitor.py  profiler.py
src/anonymizer/training/: __init__.py  datasets.py  error_handler.py  schedulers.py  unet_trainer.py  vae_trainer.py
src/anonymizer/utils/: __init__.py  image_ops.py  metrics.py  text_rendering.py
tests/: __init__.py  conftest.py  test_config_env.py  test_core_config.py  test_core_models.py  test_inpainting_dataset.py  test_training_datasets.py  test_training_unet.py  test_training_vae.py  test_unet_e2e_training.py  test_utils_image_ops.py  test_utils_metrics.py  test_utils_text_rendering.py
tests/integration/: test_batch_integration.py  test_cli.py  test_e2e_anonymization.py  test_ocr_integration.py  test_training_pipeline.py
tests/performance/: test_performance.py
tests/test_cloud/: __init__.py  test_modal_integration.py
tests/unit/: test_batch_processing.py  test_datasets.py  test_error_handling.py  test_font_management.py  test_inference_engine.py  test_model_management.py  test_ocr.py  test_ocr_timeout.py  test_unet_trainer.py
