[project]
name = "document-anonymization-using-python-diffusion-models-named-entity-recognition"
version = "0.1.0"
description = "Anonymize PII data in PDFs using NER and diffusion models"
authors = [
    {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "diffusers>=0.32.2",
    "pdf2image>=1.17.0",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "presidio-image-redactor>=0.0.56",
    "pymupdf>=1.25.4",
    "python-decouple>=3.8",
    "spacy>=3.8.4",
    "tdqm>=0.0.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]
