[project]
name = "document-anonymization-using-python-diffusion-models-named-entity-recognition"
version = "0.1.0"
description = "Anonymize PII data in PDFs using NER and diffusion models"
authors = [
    {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.8",
    "diffusers>=0.32.2",
    "pdf2image>=1.17.0",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "presidio-image-redactor>=0.0.56",
    "pymupdf>=1.25.4",
    "python-decouple>=3.8",
    "spacy>=3.8.4",
    "tqdm>=4.66.0",
    "torch>=2.6.0",
    "torchvision>=0.19.0",
    "transformers>=4.49.0",
    "accelerate>=1.2.0",
    "safetensors>=0.4.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.10.1",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.3",
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.20.0",
    "boto3>=1.39.4",
    "modal>=0.65.0",
    "wandb>=0.18.0",
    "fonttools>=4.38.0",
    "freetype-py>=2.3.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.11.0",
    "psutil>=6.0.0",
    "pynvml>=11.4.1",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--durations=10",
    "--cov=src/anonymizer",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "gpu: Tests requiring GPU",
    "slow: Slow tests",
    "benchmark: Performance benchmark tests",
]

[tool.coverage.run]
source = ["src/anonymizer"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell_use tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "\\.venv/",
    "build/",
    "dist/",
    "\\.eggs/",
    "\\.git/",
    "\\.mypy_cache/",
    "\\.tox/",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "S",     # flake8-bandit
    "A",     # flake8-builtins
    "DTZ",   # flake8-datetimez
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # use of assert
    "S105",  # hardcoded password
    "S106",  # hardcoded password
    "PLR0913",  # Too many arguments
    "TRY003",  # long exception messages (acceptable with custom exceptions)
    "TRY300",  # return in try (acceptable pattern)
    "TRY301",  # raise in try (acceptable pattern)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLC0415",  # import outside top-level (needed for optional deps)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004", "S108", "SIM117"]
"scripts/*" = ["S310"]
"docs/examples/*" = ["F821", "F841", "ARG002"]
